syntax="proto3";

package users;

option go_package="github.com/rezaAmiri123/test-microservice/user_service/proto/grpc";

service UsersService {
  rpc Login(LoginRequest) returns (LoginResponse){}
  rpc VerifyToken(VerifyTokenRequest) returns (User){}
}

message User{
  string username=1;
  string uuid=2;
}

message LoginRequest{
  string username=1;
  string password=2;
}

message LoginResponse{
  string token=1;
}

message VerifyTokenRequest{
  string token=1;
}
